--- a/learning-flask/templates/orderDetails.html
+++ b/learning-flask/templates/orderDetails.html
@@ -33,6 +33,9 @@ table {
   margin: 20px;
   font-size: medium;
 }
+.add-buttons {
+  display: flex;
+}
 .add-item{
      border: none;
      background-color: rgb(17, 136, 255);
