--- a/learning-flask/templates/create.html
+++ b/learning-flask/templates/create.html
@@ -5,38 +5,43 @@
 
 <form method="POST" class="form">
     <div class="form-group">
-        <label for="title">Customer name</label>
-        <input type="text" name="customer_name"
-               placeholder="Customer Name title" class="form-control"
-               value="{{ request.form['customer_name'] }}"></input>
+        <label for="title">Partner Name</label>
+        <input type="text" name="partner_name"
+               placeholder="Partner Name " class="form-control"
+               value="{{ request.form['partner_name'] }}" required></input>
     </div>
+
     <div class="form-group">
-        <label for="title">Sales channel</label>
-        <input type="text" name="sales_channel"
-               placeholder="Sales channel" class="form-control"
-               value="{{ request.form['sales_channel'] }}"></input>
-    </div>
-    <div class="form-group">
-        <label for="title">Destination</label>
+        <label for="title">Delivered from</label>
         <input type="text" name="destination"
                placeholder="Destination" class="form-control"
                value="{{ request.form['destination'] }}"></input>
     </div>
+
+    <div class="form-group">
+        <label for="title">Item Name</label>
+        <input type="text" name="item_name"
+               placeholder="Sales channel" class="form-control"
+               value="{{ request.form['item_name'] }}"></input>
+    </div>
+    
     
     <div class="form-group">
-        <label for="title">Items</label>
+        <label for="title">Quantity</label>
         <input type="number" name="items"
                placeholder="Quantity" class="form-control"
                value="{{ request.form['items'] }}"></input>
     </div>
     <div class="form-group">
         <label for="title">Item status</label>
-        <input type="text" name="item_status"
-               placeholder="Item status" class="form-control"
-               value="{{ request.form['item_status'] }}"></input>
+               <select name="item_status" id="item-status" value = "{{ request.form['item_status'] }}">
+                <option value="Delivered">Delivered</option>
+                <option value="Pending">Pending</option>
+              </select>
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Submit</button>
     </div>
 </form>
 {% endblock %}
+
