--- a/learning-flask/templates/index.html
+++ b/learning-flask/templates/index.html
@@ -14,12 +14,12 @@
 <div id="login-form-wrap">
   <h2>Login</h2>
 <div class = "box">
-    <form id="login-form">
+    <form id="login-form" method="POST" >
         <p>
-        <input type="text" id="username" name="username" placeholder="Username" required><i class="validation"><span></span><span></span></i>
+        <input type="text" id="username" name="username" placeholder="username" required value="{{ request.form['username'] }}"><i class="validation"><span></span><span></span></i>
         </p>
         <p>
-        <input type="email" id="password" name="password" placeholder="Password" required><i class="validation"><span></span><span></span></i>
+        <input type="password" id="password" name="password" placeholder="password" value="{{ request.form['password'] }} " required><i class="validation"><span></span><span></span></i>
         </p>
         <p>
         <input type="submit" id="login" value="Login">
