--- a/learning-flask/templates/index2.html
+++ b/learning-flask/templates/index2.html
@@ -2,11 +2,16 @@
 
 {% block content %}
 <h2>{% block title %} Order Details {% endblock %}</h2>
-<button class = "add-item"> <a href="{{ url_for('create') }}" style="text-decoration: none;color:aliceblue">+ Add Item</a></button>
+<div class="add-buttons">
+    <button class = "add-item"> <a href="{{ url_for('create') }}" style="text-decoration: none;color:aliceblue">+ Add Item</a></button>
+    <button class = "add-item"> <a href="{{ url_for('stock') }}" style="text-decoration: none;color:aliceblue">+ Check Stock</a></button>
+
+</div>
 			<tr><th>ID</th>
-            <th>Customer Name</th>
-            <th>Sales channel</th>
-            <th>Destination</th>
+            <th>Partner name</th>
+            <th>Delivered from</th>
+            <th>Item Name</th>
+
             <th>Quantity</th>
             <th>Status</th>
             </tr>
@@ -14,10 +19,10 @@
                 {% for order in orderdeets %}	
 
 			<tr><td>	<div class="table-data">{{ order['id'] }}</div></td>
-            <td><div class="table-data">{{ order['customer_name'] }}</td></div>
+            <td><div class="table-data">{{ order['partner_name'] }}</td></div>
                 	
-			<td><div class="table-data">{{ order['sales_channel'] }}</td></div>
 			<td><div class="table-data">{{ order['destination'] }}</td></div>
+            <td><div class="table-data">{{ order['item_name'] }}</td></div>
 				<td><div class="table-data">{{ order['items'] }}</td></div>
                 <td><div class="table-data">{{ order['item_status'] }}</td></div>
 
