--- a/learning-flask/templates/newOrder.html
+++ b/learning-flask/templates/newOrder.html
@@ -47,6 +47,12 @@ table {
      padding-bottom:10px ;
 
 }
+#item-status{
+  background-color: white;
+  padding: 20px;
+  border-color: transparent;
+  
+}
 .add-item:hover{
     background-color: rgb(4, 115, 226);
 
@@ -94,7 +100,6 @@ body{
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
- 
 </body>
 </html>
 
