third commit without edge cases with mvp

--- a/learning-flask/templates/index2.html
+++ b/learning-flask/templates/index2.html
@@ -4,7 +4,9 @@
 <h2>{% block title %} Order Details {% endblock %}</h2>
 <div class="add-buttons">
     <button class = "add-item"> <a href="{{ url_for('create') }}" style="text-decoration: none;color:aliceblue">+ Add Item</a></button>
-    <button class = "add-item"> <a href="{{ url_for('stock') }}" style="text-decoration: none;color:aliceblue">+ Check Stock</a></button>
+    <button class = "add-item"> <a href="{{ url_for('stock') }}" style="text-decoration: none;color:aliceblue">Check Stock</a></button>
+    <button class = "add-item"> <a href="" style="text-decoration: none;color:aliceblue">Billing</a></button>
+
 
 </div>
 			<tr><th>ID</th>
