--- a/learning-flask/templates/orderDetails.html
+++ b/learning-flask/templates/orderDetails.html
@@ -67,25 +67,69 @@ h2 {
 tr:nth-child(even) {
   background-color: #dddddd;
 }
-body{
-    font-family: 'Poppins', sans-serif;
+.option {
+  border-color: rgb(240, 240, 240);
+  border-radius: 20px;
+  padding: 10px;
+ 
 }
 
+body{
+  
+    font-family: 'Poppins', sans-serif;
+    font-size: medium;
+    margin: 20px;
+}
+
+.form { 
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.left-block{
+  float: left;
+  margin-right: 20px;
+
+}
+.table{
+  float: right;
+  width: 80%;
+  margin-left: 20px;
+  padding: 20px;
+}
 </style>
 </head>
 <body>
 
-
-<table>
-  {% block content %}{% endblock %}
-</table>
-<div class="container">
-    
+<div class = "big-block">
+  <div class = "left-block">
+  <ul class="nav flex-column">
+    <li class="nav-item">
+      <a class="nav-link" href="#">Items Recieved</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Stock</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Update inventory</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link " href="#">Add Stock</a>
+    </li>
+  </ul>
 </div>
+<div class="table">
+  <table>
+  {% block content %}{% endblock %}
+  </table>
+</div>
+</div>
+
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
- 
+ </div>
 </body>
 </html>
 
